ms-categorie-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-categorie
spec:
  selector:
    matchLabels:
      app: ms-categorie
  replicas: 1
  template:
    metadata:
      labels:
        app: ms-categorie
    spec:
      containers:
      - name: ms-categorie
        image: docker.io/hazemfelhi/ms-categorie:v3 #docker.io/moohamedd/angular-app:v1 
        ports:
        - containerPort: 8087
