ms-categorie-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-categorie-service
spec:
  selector:
    app: ms-categorie
  #type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
