ms-categorie-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: categorie-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ingress-nginx.com
      http:
        paths:
          - path: /ms-categorie
            pathType: Prefix
            backend:
              service:
                name: ms-categorie-service
                port:
                  number: 8080
